# icloud-cli-tools

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/icloud_cli/: __init__.py  auth.py  config.py  daemon.py  main.py  output.py
src/icloud_cli/services/: __init__.py  calendar.py  findmy.py  notes.py  reminders.py
systemd/: icloud-cli-sync.service
tests/: conftest.py  test_auth.py  test_calendar.py  test_findmy.py  test_notes.py  test_reminders.py
