[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "icloud-cli-tools"
version = "0.1.0"
description = "Access iCloud Calendar, Reminders, Notes, and Find My from Linux"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "alan" }]
keywords = [
    "icloud",
    "apple",
    "calendar",
    "reminders",
    "notes",
    "findmy",
    "cli",
    "linux",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "pyicloud>=1.0.0",
    "click>=8.1",
    "rich>=13.0",
    "keyring>=25.0",
    "toml>=0.10",
    "python-dateutil>=2.8",
    "html2text>=2024.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5"]

[project.scripts]
icloud-cli = "icloud_cli.main:cli"

[project.urls]
Homepage = "https://github.com/alan13367/icloud-cli-tools"
Repository = "https://github.com/alan13367/icloud-cli-tools"
Issues = "https://github.com/alan13367/icloud-cli-tools/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
